# ci-scratch

./: .gitignore  autogen.sh  build-on.sh
.github/workflows/: many-platforms.yml
test-libraries-dir/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
test-libraries-dir-dlpreopen/: Makefile.am  Makefile.in  aclocal.m4  lib1.c
test-libraries-dir-module-dlpreopen/: Makefile.am  Makefile.in  prog.c
test-libraries-fail/: Makefile.am  Makefile.in  configure  configure.ac  lib2.c  prog.c  test_prog.sh
test-libraries-ok/: Makefile.am  Makefile.in  configure  configure.ac  lib1.c  prog.c  test_prog.sh
